compiler-core/src/go/tests/snapshots/gleam_core__go__tests__blocks__right_operator_sequence.snap
---
source: compiler-core/src/go/tests/blocks.rs
expression: "\nfn go() {\n  {\n    1\n    2\n  } == 1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn go() {
  {
    1
    2
  } == 1
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func goʹ() gleam_P.Bool_t {
  return gleam_P.Bool_t((func() gleam_P.Int_t {
    _ = 1
    return 2
  })().Equal(1))
}
